# indy-genesis-updater

./: CONTRIBUTING.MD  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.MD  about.hbs  about.toml
.github/workflows/: example.yml  release-container.yml
networks/idunion/: pool_transactions_genesis.json
networks/idunion/test/: pool_genesis_transactions
src/: main.rs
