[package]
name = "indy-genesis-updater"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["IDunion contributors"]

[dependencies]
indy-vdr = "0.3.4"
clap = { version = "3.2.8", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
futures = "0.3"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }